fix overflow width

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -720,16 +720,9 @@ section {
     background: url(../img/amel.jpg) 
 }
 
-
-
-
-
-
-
-
-
-
-
 body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
+  overflow-x: hidden; 
+  overflow-y: scroll;
 }
+
